# learning-resources

./: .gitmodules  .travis.yml  LICENSE.md  README.md  index.html
.github/workflows/: cancel.yml  ci_linux.yml  ci_macos.yml  ci_misc.yml  documentation.yaml
doc/about/: stylesheet_landingpage.css
doc/biocpp/: README.md
doc/biocpp/presentation/: index.html
doc/nanocourse/: bitvectors.md  bwt.md  index.md  setup.md
doc/read_mapper/presentation/: index.html
doc/um2021/presentation/: index.html
src/biocpp/: CMakeLists.txt
src/read_mapper/: CMakeLists.txt  app_index.hpp  indexer.build_app_index.cpp  indexer.build_app_index.hpp  indexer.cli_arguments.cpp  indexer.cli_arguments.hpp  indexer.cpp  indexer.store_app_index.cpp  indexer.store_app_index.hpp  mapper.cpp
src/read_mapper/indexer/: build_fm_index.cpp  build_fm_index.hpp  cli_arguments.cpp  read_reference_file.cpp  read_reference_file.hpp  store_app_index.cpp  store_app_index.hpp
src/read_mapper/mapper/: align_query_to_reference.cpp  align_query_to_reference.hpp  cli_arguments.cpp  cli_arguments.hpp  read_app_index_file.cpp  read_app_index_file.hpp  read_query_file.cpp  read_query_file.hpp  search_query.cpp  search_query.hpp
test/: ci.cmake  learning_resources-test.cmake
test/documentation/: CMakeLists.txt  DoxygenLayout.xml  learning_resources-doxygen.cmake  learning_resources_doxygen_cfg.in  lr-doxygen.cmake  lr_doxygen_cfg.in
test/snippet/: CMakeLists.txt
test/snippet/biocpp/: compute_average_over_int_vector.cpp  compute_sum_over_int_vector.cpp  constrained_sum.cpp  part_1a_hello_world.cpp  part_1b_cli.cpp  part_2a_compute_minimum_quality.cpp  part_3a_filtering_by_average_quality.cpp  part_3b_filtering_by_average_quality_concept.cpp  part_3c_filtering_by_average_quality_of_paired_end.cpp  part_4a_concepts.cpp  part_4b_complicated_stack.cpp  part_4b_complicated_stack_before_concepts.out  part_4b_complicated_stack_with_concepts.out
test/snippet/bitvector/: bitvector.cpp
test/snippet/nanocourse/: backward_search.cpp  bitvector.hpp  bwt_count_table.cpp  bwt_occurrence_table.cpp  bwt_occurrence_table2.cpp  fm_index_seqan3.cpp  solution1.cpp  solution2.cpp  solution3.cpp  solution4.cpp  solution4_intrinsic.cpp  solution5.cpp
test/snippet/read_mapper/: app_index.hpp  indexer.cpp  mapper_final.cpp  read_mapper_indexer_step2.cpp  read_mapper_indexer_step3.cpp  read_mapper_step2.cpp  read_mapper_step3.cpp  read_mapper_step4.cpp
test/snippet/setup/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/bitvector/: CMakeLists.txt  bitvector_test.cpp
